--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -701,41 +701,41 @@ body {
         text-align: center;
         font-size: 2rem;
     }
-}
-
-a {
-    text-decoration: none;
-    font-family: var(--wilderness-font);
-    color: black;
-    .site-list-item {
-        text-align: center;
+    a {
         text-decoration: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 0.6rem;
-        background-color: var(--color-off-white);
-        box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4), -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
-        border-radius: 20px;
-        padding-top: 1.3rem;
-        padding: 1rem;
-        img {
-            max-width: 90%;
-            margin-top: 1rem;
-        }
-        h3 {
-            margin-top: 1rem;
-            margin-bottom: 0em;
-            font-family: var(--wilderness-font);
-            font-size: 2rem;
-            color: black;
-        }
-        .visited {
+        font-family: var(--wilderness-font);
+        color: black;
+        .site-list-item {
+            text-align: center;
             text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 0.6rem;
+            background-color: var(--color-off-white);
+            box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4), -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+            border-radius: 20px;
+            padding-top: 1.3rem;
+            padding: 1rem;
+            img {
+                max-width: 90%;
+                margin-top: 1rem;
+            }
+            h3 {
+                margin-top: 1rem;
+                margin-bottom: 0em;
+                font-family: var(--wilderness-font);
+                font-size: 2rem;
+                color: black;
+            }
+            .visited {
+                text-decoration: none;
+            }
         }
     }
 }
+
 
 #map-container {
     width: 100%;
@@ -866,7 +866,7 @@ a {
             justify-content: center;
         }
         .tile {
-            width: 40vw;
+            width: 27vw;
             min-height: 550px;
         }
         img {
@@ -878,11 +878,24 @@ a {
   
 
   #single-site {
+    h1 {
+      margin-top: 30px;
+      font-size: 7em;
+    }
     .carousel-container {
-      max-width: 80vw;
+      max-width: 90vw;
       margin: 50px;
       display: flex;
+      flex-direction: column;
       justify-content: center;
+      .carousel.carousel-slider {
+        margin: 0 auto;
+        max-width: 1000px;
+        max-height: 600px;
+        img {
+          object-fit: contain;
+        }
+      }
     }
   }
 
