--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -102,7 +102,15 @@ body {
 #dark-mode {
   background-color: var(--color-inky-blue);
   color: var(--color-off-white);
-  #homepage {
+  #homepage,
+  #splashscreen,
+  #browse,
+  #register,
+  #login,
+  #hotels,
+  #single-site,
+  #settings,
+  #my-account {
     button {
       box-shadow: none;
     }
@@ -846,36 +854,6 @@ body {
     }
   }
 
-  #splashscreen {
-    svg {
-      top: -2vh;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    #browse {
-      select.dropdown {
-        margin-bottom: 1.5rem;
-      }
-      #all-tiles {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .tile {
-        width: 27vw;
-        min-height: 550px;
-      }
-      img {
-        height: 300px;
-        object-fit: cover;
-        object-position: center;
-      }
-      .buttons {
-        top: 560px;
-      }
-    }
-  }
-
   #single-site {
     h1 {
       margin-top: 30px;
@@ -1011,26 +989,34 @@ body {
       display: flex;
       justify-content: center;
     }
+    li.slide {
+      background: none;
+      display: flex;
+      max-height: 600px;
+      align-items: center;
+      flex-direction: row;
+      flex-flow: initial;
+    }
   }
-}
 
-#my-account {
-  .my-reviews {
-    #review-container {
-      padding: 2rem;
-      width: auto;
-      .review-header {
-        .review-avatar {
-          width: auto;
-          img {
-            width: 150px;
-            height: 150px;
+  #my-account {
+    .my-reviews {
+      #review-container {
+        padding: 2rem;
+        width: auto;
+        .review-header {
+          .review-avatar {
+            width: auto;
+            img {
+              width: 150px;
+              height: 150px;
+            }
           }
-        }
-        .review-meta-info {
-          margin-left: 6vw;
-          h3 {
-            font-size: 2rem;
+          .review-meta-info {
+            margin-left: 6vw;
+            h3 {
+              font-size: 2rem;
+            }
           }
         }
       }
