--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -846,36 +846,6 @@ body {
     }
   }
 
-  #splashscreen {
-    svg {
-      top: -2vh;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    #browse {
-      select.dropdown {
-        margin-bottom: 1.5rem;
-      }
-      #all-tiles {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .tile {
-        width: 27vw;
-        min-height: 550px;
-      }
-      img {
-        height: 300px;
-        object-fit: cover;
-        object-position: center;
-      }
-      .buttons {
-        top: 560px;
-      }
-    }
-  }
-
   #single-site {
     h1 {
       margin-top: 30px;
@@ -1011,39 +981,113 @@ body {
       display: flex;
       justify-content: center;
     }
-  }
-}
-
-#hotels {
-  .hotel-tiles {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    article.hotel-tile {
-      width: 27vw;
+    .site-review-header {
+      justify-content: center;
+      p {
+        margin-left: 10px;
+      }
     }
-  }
-}
-#my-account {
-  .my-reviews {
+    .wish-list-visited-container {
+      justify-content: center;
+      p {
+        margin: 40px
+      }
+    }
     #review-container {
-      padding: 2rem;
-      width: auto;
-      .review-header {
-        .review-avatar {
-          width: auto;
-          img {
-            width: 150px;
-            height: 150px;
-          }
-        }
-        .review-meta-info {
-          margin-left: 6vw;
-          h3 {
-            font-size: 2rem;
-          }
+      display: flex;
+      justify-content: center;
+      .review-avatar {
+        width: auto;
+        img {
+          width: 5rem;
+          height: 5rem;
         }
       }
     }
   }
+  #hotels {
+    .hotel-tiles {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      article.hotel-tile {
+        width: 27vw;
+      }
+    }
+  }
+  #my-account {
+    .my-reviews {
+      #review-container {
+        padding: 2rem;
+        width: auto;
+        .review-header {
+          .review-avatar {
+            width: auto;
+            img {
+              width: 150px;
+              height: 150px;
+            }
+          }
+          .review-meta-info {
+            margin-left: 6vw;
+            h3 {
+              font-size: 2rem;
+            }
+          }
+        }
+      }
+    }
+    .account-tab-title {
+      margin-bottom: 0;
+    }
+    .wish-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      .site-list-item{
+        margin-top: 25px;
+        width: 27vh;
+        min-height: 300px;
+        h3 {
+          color: var(--color-forest-green);
+          text-decoration: underline;
+        }
+        img {
+          height: 200px;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+    }
+    .visited {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      .site-list-item{
+        margin-top: 25px;
+        width: 27vh;
+        min-height: 300px;
+        h3 {
+          color: var(--color-forest-green);
+          text-decoration: underline;
+        }
+        img {
+          height: 200px;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+    }
+
+  }
+
+
+
+
+
+
+
+
+
 }
+
