--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -107,6 +107,7 @@ body {
   #homepage,
   #splashscreen,
   #browse,
+  #other-user,
   #register,
   #login,
   #hotels,
@@ -382,7 +383,6 @@ body {
     .tile {
       text-align: center;
       display: flex;
-      min-width: 365px;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -471,6 +471,8 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+ 
+
     p {
       font-size: 0.9rem;
     }
@@ -619,6 +621,15 @@ body {
 }
 
 #review-container {
+  .review-header {
+    .review-avatar {
+      width: 20vw;
+      img {
+        width: 100%;
+      }
+    }
+
+  }
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -926,6 +937,109 @@ body {
   }
 }
 
+#other-user {
+  h1 {
+    margin-bottom: 20px;
+  }
+  p {
+    margin-top: 20px;
+  }
+  div.react-tabs__tab-panel {
+    padding: 0.6rem;
+    .review-header {
+      align-items: center;
+      .review-avatar {
+        width: 40vw;
+        img {
+          width: 40vw;
+          height: 40vw;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+      .review-meta-info {
+        h3 {
+          margin: 0 0 0.6rem;
+        }
+      }
+    }
+  }
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+    margin-top: 0.5em;
+  }
+
+  img.user-avatar-img {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+  }
+
+  .bio {
+    margin: 1.6rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: var(--wilderness-font);
+  }
+  h3 {
+    margin-bottom: 0.3rem;
+    font-size: 1.8rem;
+  }
+
+  p {
+    margin: 0.5rem;
+  }
+
+  .link {
+    font-family: var(--body-font);
+    font-size: 0.9rem;
+    color: var(--color-forest-green);
+    text-decoration: underline;
+    cursor: pointer;
+  }
+
+  a {
+    text-decoration: none;
+    font-family: var(--wilderness-font);
+    color: black;
+    .site-list-item {
+      text-align: center;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0.6rem;
+      background-color: var(--color-off-white);
+      box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
+        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+      border-radius: 20px;
+      padding-top: 1.3rem;
+      padding: 1rem;
+      img {
+        max-width: 90%;
+        margin-top: 1rem;
+      }
+      h3 {
+        margin-top: 1rem;
+        margin-bottom: 0em;
+        font-family: var(--wilderness-font);
+        font-size: 2rem;
+        color: black;
+      }
+      .visited {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
 @media only screen and (min-width: 600px) {
   div.react-tabs {
     ul {
@@ -952,6 +1066,7 @@ body {
         }
       }
     }
+    min-width: 365px;
   }
 
   #login {
@@ -1170,6 +1285,76 @@ body {
           object-fit: cover;
           object-position: center;
         }
+      }
+    }
+  }
+
+  #other-user {
+    h1 {
+      margin-bottom: 20px;
+    }
+    p {
+      margin-top: 20px;
+    }
+    .user-reviews {
+      #review-container {
+        padding: 2rem;
+        width: auto;
+        .review-header {
+          .review-avatar {
+            width: auto;
+            img {
+              width: 150px;
+              height: 150px;
+            }
+          }
+          .review-meta-info {
+            margin-left: 6vw;
+            h3 {
+              font-size: 2rem;
+            }
+          }
+        }
+      }
+
+      
+    }
+  } 
+  .wish-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    .site-list-item {
+      margin-top: 25px;
+      width: 27vh;
+      min-height: 300px;
+      h3 {
+        color: var(--color-forest-green);
+        text-decoration: underline;
+      }
+      img {
+        height: 200px;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+  }
+  .visited {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    .site-list-item {
+      margin-top: 25px;
+      width: 27vh;
+      min-height: 300px;
+      h3 {
+        color: var(--color-forest-green);
+        text-decoration: underline;
+      }
+      img {
+        height: 200px;
+        object-fit: cover;
+        object-position: center;
       }
     }
   }
