--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poppins:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Barriecito&family=Poppins:wght@300;400;500;600&display=swap");
 @import url("../../node_modules/react-tabs/style/react-tabs.css");
 @import url("../../node_modules/react-responsive-carousel/lib/styles/carousel.css");
+
 @mixin global-button {
   padding: 1rem 2rem;
   border: none;
@@ -212,6 +213,13 @@ body {
     transform: scale(0.85);
   }
   .buttons {
+    h1 {
+      display: none;
+      font-family: "Barriecito", cursive;
+      color: var(--color-off-white);
+      font-size: 8vw;
+      text-transform: uppercase;
+    }
     position: absolute;
     top: 460px;
     bottom: 0;
@@ -471,7 +479,6 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
- 
 
     p {
       font-size: 0.9rem;
@@ -636,7 +643,6 @@ body {
         width: 100%;
       }
     }
-
   }
   display: flex;
   flex-direction: column;
@@ -1083,13 +1089,31 @@ body {
   }
 
   #splashscreen {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-right: 5vw;
+
     svg {
-      top: -2vh;
-      left: 50%;
-      transform: translateX(-50%);
+      position: static;
     }
+
     .buttons {
-      top: 560px;
+      position: static;
+      height: 50vh;
+      flex: 1;
+      transform: scale(1.1);
+      padding-top: 2rem;
+      background: transparent;
+
+      h1 {
+        display: block;
+        flex: 2.5;
+      }
+
+      *:not(h1) {
+        flex: 1;
+      }
     }
   }
 
@@ -1315,10 +1339,8 @@ body {
           }
         }
       }
-
-      
     }
-  } 
+  }
   .wish-list {
     display: flex;
     flex-wrap: wrap;
