--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -103,6 +103,10 @@ body {
 }
 
 #dark-mode {
+  #homepage {
+    background-image: url(../assets/dark-background.png);
+    background-size: cover;
+  }
   background-color: var(--color-inky-blue);
   color: var(--color-off-white);
   #homepage,
@@ -115,6 +119,9 @@ body {
   #single-site,
   #settings,
   #my-account {
+    button:hover {
+      background-color: var(--color-inky-blue);
+    }
     .hotel-tile {
       background-color: var(--color-grey-blue);
       box-shadow: none;
@@ -269,6 +276,8 @@ body {
 }
 
 #homepage {
+  background-image: url(../assets/background.png);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
